--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,3 +29,23 @@ h1, h2 {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.character {
+
+    width: 25%;
+    margin: 3%;
+    border: 2px red solid;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.character img {
+
+    width: 80%;
+    border-radius: 3%;
+}
+
+.Info-character{
+    text-align: justify;
+    padding: 3%;
+}
